<resources
    tools:ignore="MissingTranslation"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CS:GO Case-Open Simulator</string>
    <string name="another_case">Another case ?</string>
    <string name="shared_title">Share to ...</string>
    <string name="love_life">Love your Life</string>
    <string name="away">Away from Case</string>
    <string name="instruction_text1">You can visit your inventory at the navigation menu or from the icon at the top
    right corner in the open-case game page.</string>
    <string name="instruction_text2">In the inventory page you can select the item and query its price by
        clicking the icon at the top right corner.</string>
    <string name="instruction_text3">In the inventory you can also delete the items in delete-mode by
        long-clicking the item.</string>
    <string name="instruction_text4">If you like this app please mark it 5 stars in the market and share it to your friends !</string>
    <string name="instruction_text5">If this app helps you save a lot of money from Gabe\'s deception , please
    don\'t be stingy to show your kindness. You can donate me $ via Alipay/WeChat or skins via Steam :)</string>
    <string name="shared_text">I\'m playing CS:GO Case-Open Simulator. Have a try ! \nDownload URL :</string>
    <string name="alipay_text">Please install alipay first</string>
    <string name="wechat_text">Please install WeChat first</string>
    <string name="wechat_permission">Permission denied !</string>
    <string name="wechat_guide">The picture of QR code will added into your album. Please go into the
        album from the button at the top-right corner of the scanning page of WeChat to choose it.</string>
    <string name="network_error">Network Error !</string>
    <string name="inventory">Inventory</string>
    <string name="instruction">Instruction</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="alipay">Alipay</string>
    <string name="wechat">Wechat</string>
    <string name="steam">Steam</string>
    <string name="quit">Quit</string>
    <string name="discard">Discard</string>
    <string name="keep">Keep</string>
    <string name="start">Start this</string>
    <string name="mode">Mode</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="stats">Stats</string>
    <string name="factory_new">Factory New</string>
    <string name="minimal_wear">Minimal Wear</string>
    <string name="field_tested">Field-Tested</string>
    <string name="well_worn">Well-Worn</string>
    <string name="battle_scarred">Battle-Scarred</string>
    <string name="prisma_case">The Prisma Collection</string>
    <string name="danger_zone_case">The Danger Zone Collection</string>
    <string name="horizon_case">The Horizon Collection</string>
    <string name="clutch_case">The Clutch Collection</string>
    <string name="spectrum_2_case">The Spectrum 2 Collection</string>
    <string name="operation_hydra_case">The Operation Hydra Collection</string>
    <string name="spectrum_case">The Spectrum Collection</string>
    <string name="glove_case">The Glove Collection</string>
    <string name="gamma_2_case">The Gamma 2 Collection</string>
    <string name="gamma_case">The Gamma Collection</string>
    <string name="csgo_weapon_case">The Arms Deal Collection</string>
    <string name="csgo_weapon_case_2">The Arms Deal 2 Collection</string>
    <string name="csgo_weapon_case_3">The Arms Deal 3 Collection</string>
    <string name="chroma_case">The Chroma Collection</string>
    <string name="chroma_case_2">The Chroma 2 Collection</string>
    <string name="chroma_case_3">The Chroma 3 Collection</string>
    <string name="esports_2013_case">The eSports 2013 Collection</string>
    <string name="esports_2013_winter_case">The eSports 2013 Winter Collection</string>
    <string name="esports_2014_summer_case">The eSports 2014 Summer Collection</string>
    <string name="falchion_case">The Falchion Collection</string>
    <string name="huntsman_weapon_case">The Huntsman Collection</string>
    <string name="operation_bravo_case">The Bravo Collection</string>
    <string name="operation_breakout_weapon_case">The Breakout Collection</string>
    <string name="operation_phoenix_weapon_case">The Phoenix Collection</string>
    <string name="operation_vanguard_weapon_case">The Vanguard Collection</string>
    <string name="operation_wildfire_case">The Wildfire Collection</string>
    <string name="revolver_case">The Revolver Case Collection</string>
    <string name="shadow_case">The Shadow Collection</string>
    <string name="winter_offensive_weapon_case">The Winter Offensive Collection</string>
    <string name="the_emperor">The Emperor</string>
    <string name="angry_mob">Angry Mob</string>
    <string name="incinegator">Incinegator</string>
    <string name="skull_crusher">Skull Crusher</string>
    <string name="atheris">Atheris</string>
    <string name="light_rail">Light Rail</string>
    <string name="gauss">Gauss</string>
    <string name="bamboozle">Bamboozle</string>
    <string name="uncharted">Uncharted</string>
    <string name="whitefish">Whitefish</string>
    <string name="verdigris">Verdigris</string>
    <string name="crypsis">Crypsis</string>
    <string name="mischief">Mischief</string>
    <string name="momentum">Momentum</string>
    <string name="phosphor">Phosphor</string>
    <string name="flashback">Flashback</string>
    <string name="nevermore">Nevermore</string>
    <string name="pipe_down">Pipe Down</string>
    <string name="signal">Signal</string>
    <string name="scavenger">Scavenger</string>
    <string name="magnesium">Magnesium</string>
    <string name="danger_close">Danger Close</string>
    <string name="modest_Threat">Modest Threat</string>
    <string name="wood_fired">Wood Fired</string>
    <string name="code_red">Code Red</string>
    <string name="nightmare">Nightmare</string>
    <string name="eye_of_athena">Eye of Athena</string>
    <string name="devourer">Devourer</string>
    <string name="paw">PAW</string>
    <string name="high_seas">High Seas</string>
    <string name="toy_soldier">Toy Soldier</string>
    <string name="warhawk">Warhawk</string>
    <string name="amber_slipstream">Amber Slipstream</string>
    <string name="traction">Traction</string>
    <string name="snek_9">Snek-9</string>
    <string name="shred">Shred</string>
    <string name="survivalist">Survivalist</string>
    <string name="mortis">Mortis</string>
    <string name="cortex">Cortex</string>
    <string name="stymphalian">Stymphalian</string>
    <string name="moonrise">Moonrise</string>
    <string name="swag_7">SWAG-7</string>
    <string name="wild_six">Wild Six</string>
    <string name="lionfish">Lionfish</string>
    <string name="arctic_wolf">Arctic Wolf</string>
    <string name="night_riot">Night Riot</string>
    <string name="grip">Grip</string>
    <string name="flame_test">Flame Test</string>
    <string name="the_empress">The Empress</string>
    <string name="see_ya_later">See Ya Later</string>
    <string name="high_roller">High Roller</string>
    <string name="leaded_glass">Leaded Glass</string>
    <string name="llama_cannon">Llama Cannon</string>
    <string name="exposure">Exposure</string>
    <string name="phantom">Phantom</string>
    <string name="ziggy">Ziggy</string>
    <string name="goo">Goo</string>
    <string name="tacticat">Tacticat</string>
    <string name="triqua">Triqua</string>
    <string name="hunter">Hunter</string>
    <string name="morris">Morris</string>
    <string name="cracked_opal">Cracked Opal</string>
    <string name="off_world">Off World</string>
    <string name="jungle_slipstream">Jungle Slipstream</string>
    <string name="oni_taiji">Oni Taiji</string>
    <string name="sugar_rush">Sugar Rush</string>
    <string name="hellfire">Hellfire</string>
    <string name="cobra_strike">Cobra Strike</string>
    <string name="deaths_head">Death\'s Head</string>
    <string name="death_grip">Death Grip</string>
    <string name="orbit_mk01">Orbit Mk01</string>
    <string name="woodsman">Woodsman</string>
    <string name="red_rock">Red Rock</string>
    <string name="macabre">Macabre</string>
    <string name="blueprint">Blueprint</string>
    <string name="hard_water">Hard Water</string>
    <string name="aloha">Aloha</string>
    <string name="metal_flowers">Metal Flowers</string>
    <string name="cut_out">Cut Out</string>
    <string name="neo_noir">Neo-Noir</string>
    <string name="xiangliu">Xiangliu</string>
    <string name="fever_dream">Fever Dream</string>
    <string name="decimator">Decimator</string>
    <string name="scaffold">Scaffold</string>
    <string name="seasons">Seasons</string>
    <string name="last_dive">Last Dive</string>
    <string name="crimson_tsunami">Crimson Tsunami</string>
    <string name="emerald_poison_dart">Emerald Poison Dart</string>
    <string name="oxide_blaze">Oxide Blaze</string>
    <string name="capillary">Capillary</string>
    <string name="akoben">Akoben</string>
    <string name="ripple">Ripple</string>
    <string name="zander">Zander</string>
    <string name="buzz_kill">Buzz Kill</string>
    <string name="dragonfire">Dragonfire</string>
    <string name="wasteland_princess">Wasteland Princess</string>
    <string name="mecha_industries">Mecha Industries</string>
    <string name="shallow_grave">Shallow Grave</string>
    <string name="gila">Gila</string>
    <string name="flash_back">Flash Back</string>
    <string name="royal_consorts">Royal Consorts</string>
    <string name="stinger">Stinger</string>
    <string name="cyrex">Cyrex</string>
    <string name="black_sand">Black Sand</string>
    <string name="sonar">Sonar</string>
    <string name="sand_scale">Sand Scale</string>
    <string name="turf">Turf</string>
    <string name="cirrus">Cirrus</string>
    <string name="ironwork">Ironwork</string>
    <string name="polymer">Polymer</string>
    <string name="neon_revolution">Neon Revolution</string>
    <string name="roll_cage">Roll Cage</string>
    <string name="fuel_injector">Fuel Injector</string>
    <string name="syd_mead">Syd Mead</string>
    <string name="airlock">Airlock</string>
    <string name="petroglyph">Petroglyph</string>
    <string name="directive">Directive</string>
    <string name="powercore">Powercore</string>
    <string name="triarch">Triarch</string>
    <string name="weasel">Weasel</string>
    <string name="imprint">Imprint</string>
    <string name="grim">Grim</string>
    <string name="ventilator">Ventilator</string>
    <string name="briefing">Briefing</string>
    <string name="slipstream">Slipstream</string>
    <string name="scumbria">Scumbria</string>
    <string name="dazzle">Dazzle</string>
    <string name="wasteland_rebel">Wasteland Rebel</string>
    <string name="desolate_space">Desolate Space</string>
    <string name="imperial_dragon">Imperial Dragon</string>
    <string name="bloodsport">Bloodsport</string>
    <string name="aristocrat">Aristocrat</string>
    <string name="limelight">Limelight</string>
    <string name="chopper">Chopper</string>
    <string name="phobos">Phobos</string>
    <string name="reboot">Reboot</string>
    <string name="ice_cap">Ice Cap</string>
    <string name="carnivore">Carnivore</string>
    <string name="iron_clad">Iron Clad</string>
    <string name="violent_daimyo">Violent Daimyo</string>
    <string name="harvester">Harvester</string>
    <string name="exo">Exo</string>
    <string name="aerial">Aerial</string>
    <string name="lightning_strike">Lightning Strike</string>
    <string name="hypnotic">Hypnotic</string>
    <string name="case_hardened">Case Hardened</string>
    <string name="dark_water">Dark Water</string>
    <string name="dragon_tattoo">Dragon Tattoo</string>
    <string name="skulls">Skulls</string>
</resources>