<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textSize="18sp"
            android:textColor="@color/classified"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/instruction_text1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/instruction_text2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/instruction_text3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/instruction_text4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/instruction_text5"/>

    </LinearLayout>

</android.support.v7.widget.CardView>